unpackaged/main/default/objects/RepairOrder__c/RepairOrder__c.object-meta.xml
<CustomObject>
    <description>RMS Repair Order</description>
    <label>Repair Order</label>
    <nameField>
        <label>Claim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repair Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>