unpackaged/main/default/objects/RepairOrder__c/fields/Claim_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Claim_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Claim External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>