unpackaged/main/default/objects/RepairOrder__c/fields/ClaimStatus__c.field-meta.xml
<CustomField>
    <fullName>ClaimStatus__c</fullName>
    <label>Repair Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Draft</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Quotation To Submit</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>In Repair</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Waiting for client pick-up</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Waiting for delivery</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Waiting for replacement</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Product not reparable</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>In Transit To Pickup Location</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Replaced</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Spare Parts to prepare &amp; ship</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>SP to ship</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>Case completed</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>Aborted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>