unpackaged/main/default/objects/RepairOrder__c/fields/DateOfPurchase__c.field-meta.xml
<CustomField>
    <fullName>DateOfPurchase__c</fullName>
    <label>Date Of Purchase</label>
    <type>Date</type>
</CustomField>