unpackaged/main/default/objects/RepairOrder__c/fields/DateOfReplacement__c.field-meta.xml
<CustomField>
    <fullName>DateOfReplacement__c</fullName>
    <label>Date Of Replacement</label>
    <type>DateTime</type>
</CustomField>