unpackaged/main/default/objects/RepairOrder__c/fields/DeliveryAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddressLine1__c</fullName>
    <label>Delivery Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>