unpackaged/main/default/objects/RepairOrder__c/fields/DeliveryAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddressLine2__c</fullName>
    <label>Delivery Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>