unpackaged/main/default/objects/RepairOrder__c/fields/DeliveryAddressLine3__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddressLine3__c</fullName>
    <label>Delivery Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>