unpackaged/main/default/objects/RepairOrder__c/fields/DeliveryCity__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCity__c</fullName>
    <label>Delivery City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>