unpackaged/main/default/objects/RepairOrder__c/fields/DeliveryCountry__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCountry__c</fullName>
    <label>Delivery Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>