unpackaged/main/default/objects/RepairOrder__c/fields/DeliveryType__c.field-meta.xml
<CustomField>
    <fullName>DeliveryType__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Pickup</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Delivery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>