unpackaged/main/default/objects/RepairOrder__c/fields/DeliveryZipCode__c.field-meta.xml
<CustomField>
    <fullName>DeliveryZipCode__c</fullName>
    <label>Delivery ZipCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>