unpackaged/main/default/objects/RepairOrder__c/fields/EndOfWarranty__c.field-meta.xml
<CustomField>
    <fullName>EndOfWarranty__c</fullName>
    <formula>IF(HasLifetimeWarranty__c, &#39;Lifetime Guarantee&#39;,  TEXT(EndOfWarrantyDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Of Warranty</label>
    <type>Text</type>
</CustomField>