unpackaged/main/default/objects/RepairOrder__c/fields/EndOfWarrantyDate__c.field-meta.xml
<CustomField>
    <fullName>EndOfWarrantyDate__c</fullName>
    <label>End Of WarrantyDate</label>
    <type>Date</type>
</CustomField>