unpackaged/main/default/objects/RepairOrder__c/fields/FinalStatusDateModified__c.field-meta.xml
<CustomField>
    <fullName>FinalStatusDateModified__c</fullName>
    <label>FinalStatusDateModified</label>
    <type>DateTime</type>
</CustomField>