unpackaged/main/default/objects/RepairOrder__c/fields/HasLifetimeWarranty__c.field-meta.xml
<CustomField>
    <fullName>HasLifetimeWarranty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Lifetime Warranty</label>
    <type>Checkbox</type>
</CustomField>