unpackaged/main/default/objects/RepairOrder__c/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>