unpackaged/main/default/objects/RepairOrder__c/fields/ItemCurrentLocation__c.field-meta.xml
<CustomField>
    <fullName>ItemCurrentLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ItemCurrent Location</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Current Location</relationshipLabel>
    <relationshipName>ItemCurrentLocation</relationshipName>
    <type>Lookup</type>
</CustomField>