unpackaged/main/default/objects/RepairOrder__c/fields/OutcomeStatus__c.field-meta.xml
<CustomField>
    <fullName>OutcomeStatus__c</fullName>
    <label>Outcome Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Repaired</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Replaced</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Beyond Repair OW</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Quotation Rejected</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Left for Disposal</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>For scrap</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Return to warehouse</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>SpareParts order cancelled</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>SpareParts Ordered</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Redunded</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Aborted</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>To recycle</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Keep</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Quotation Rejected (Country)</label>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>