unpackaged/main/default/objects/RepairOrder__c/fields/PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>PaymentStatus__c</fullName>
    <label>PaymentStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Payment done</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>No payment needed (free repair)</label>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>