unpackaged/main/default/objects/RepairOrder__c/fields/PickupLocation__c.field-meta.xml
<CustomField>
    <fullName>PickupLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup Location</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipName>PickupLocation</relationshipName>
    <type>Lookup</type>
</CustomField>