unpackaged/main/default/objects/RepairOrder__c/fields/PriceAgreedWithCustomer__c.field-meta.xml
<CustomField>
    <fullName>PriceAgreedWithCustomer__c</fullName>
    <label>PriceAgreedWithCustomer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>