unpackaged/main/default/objects/RepairOrder__c/fields/ReceivingLocation__c.field-meta.xml
<CustomField>
    <fullName>ReceivingLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiving Location</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipName>ReceivingLocation</relationshipName>
    <type>Lookup</type>
</CustomField>