unpackaged/main/default/objects/RepairOrder__c/fields/ReceptionType__c.field-meta.xml
<CustomField>
    <fullName>ReceptionType__c</fullName>
    <label>Reception Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Walk In</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Sent In</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Pick-up</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>