unpackaged/main/default/objects/RepairOrder__c/fields/RepairLocation__c.field-meta.xml
<CustomField>
    <fullName>RepairLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair Location</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipName>RepairLocation</relationshipName>
    <type>Lookup</type>
</CustomField>