unpackaged/main/default/objects/RepairOrder__c/fields/RepairOrder__c.field-meta.xml
<CustomField>
    <fullName>RepairOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Repair Order</label>
    <referenceTo>RepairOrder__c</referenceTo>
    <relationshipLabel>Repair Orders</relationshipLabel>
    <relationshipName>RepairOrder</relationshipName>
    <type>Lookup</type>
</CustomField>