unpackaged/main/default/objects/RepairOrder__c/fields/RepairOrderType__c.field-meta.xml
<CustomField>
    <fullName>RepairOrderType__c</fullName>
    <label>Repair Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Spare Parts Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>