unpackaged/main/default/objects/RepairOrder__c/fields/RepairType__c.field-meta.xml
<CustomField>
    <fullName>RepairType__c</fullName>
    <label>Repair Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>