unpackaged/main/default/objects/RepairOrder__c/fields/Replacement_Product__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replacement Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Replacement Products</relationshipLabel>
    <relationshipName>RepairOrders</relationshipName>
    <type>Lookup</type>
</CustomField>