unpackaged/main/default/objects/RepairOrder__c/fields/ReplacementItemId__c.field-meta.xml
<CustomField>
    <fullName>ReplacementItemId__c</fullName>
    <label>Replacement Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>