unpackaged/main/default/objects/RepairOrder__c/fields/RMS_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>RMS_CreatedDate__c</fullName>
    <label>RMS Created Date</label>
    <type>DateTime</type>
</CustomField>