unpackaged/main/default/objects/RepairOrder__c/fields/TECH_CegidId__c.field-meta.xml
<CustomField>
    <fullName>TECH_CegidId__c</fullName>
    <label>Cegid Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>