unpackaged/main/default/objects/RepairOrder__c/fields/TotalBillablePrice__c.field-meta.xml
<CustomField>
    <fullName>TotalBillablePrice__c</fullName>
    <label>Billable Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>