unpackaged/main/default/objects/RepairOrder__c/fields/TrackingURL__c.field-meta.xml
<CustomField>
    <fullName>TrackingURL__c</fullName>
    <label>Tracking URL</label>
    <type>Url</type>
</CustomField>