unpackaged/main/default/objects/RepairOrder__c/fields/UnderWarrantyWhenCreated__c.field-meta.xml
<CustomField>
    <fullName>UnderWarrantyWhenCreated__c</fullName>
    <label>Under Warranty When Created</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Not under warranty</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Under warranty</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>