unpackaged/main/default/objects/RepairOrder__c/fields/WarrantyType__c.field-meta.xml
<CustomField>
    <fullName>WarrantyType__c</fullName>
    <label>Warranty Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>2 years</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2+3 years</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>5 years</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Lifetime</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>