unpackaged/main/default/objects/RepairOrder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Claim_External_Id__c</columns>
    <columns>RMS_CreatedDate__c</columns>
    <columns>ClaimStatus__c</columns>
    <columns>FinalStatusDateModified__c</columns>
    <columns>RepairType__c</columns>
    <columns>Product__c</columns>
    <columns>SerialNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>